--- a/views/includes/end.ejs
+++ b/views/includes/end.ejs
@@ -94,6 +94,12 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 <script src="js/google-map.js"></script>
 <script src="js/main.js"></script>
-
+<script type="text/javascript">
+    
+  var select = document.getElementById('category_name');
+  select.addEventListener('change', function() {
+      this.form.submit();
+  }, false);
+</script>
 </body>
 </html>
