--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -39,7 +39,7 @@
     id="ftco-navbar"
   >
     <div class="container">
-      <a class="navbar-brand" href="index.html">Vegefoods</a>
+      <a class="navbar-brand" href="/">Vegefoods</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -56,11 +56,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a href="/" class="nav-link">Home</a>
-          </li>
-         
-          <li class="nav-item">
-            <a href="/detail" class="nav-link">product detail</a>
-          </li>
+          </li>       
           <li class="nav-item">
             <a href="/edit" class="nav-link">insert</a>
           </li>
