--- a/views/products/cart.ejs
+++ b/views/products/cart.ejs
@@ -6,122 +6,65 @@
             <div class="col-md-12 ftco-animate">
                 <div class="cart-list">
                     <table class="table">
-                        <thead class="thead-primary">
-                          <tr class="text-center">
-                            <th>&nbsp;</th>
-                            <th>&nbsp;</th>
-                            <th>Product name</th>
-                            <th>Price</th>
-                            <th>Quantity</th>
-                            <th>Total</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr class="text-center">
-                            <td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
-                            
-                            <td class="image-prod"><div class="img" style="background-image:url(images/product-3.jpg);"></div></td>
-                            
-                            <td class="product-name">
-                                <h3>Bell Pepper</h3>
-                                <p>Far far away, behind the word mountains, far from the countries</p>
-                            </td>
-                            
-                            <td class="price">$4.90</td>
-                            
-                            <td class="quantity">
-                                <div class="input-group mb-3">
-                                 <input type="text" name="quantity" class="quantity form-control input-number" value="1" min="1" max="100">
-                              </div>
-                          </td>
-                            
-                            <td class="total">$4.90</td>
-                          </tr><!-- END TR-->
-
-                          <tr class="text-center">
-                            <td class="product-remove"><a href="#"><span class="ion-ios-close"></span></a></td>
-                            
-                            <td class="image-prod"><div class="img" style="background-image:url(images/product-4.jpg);"></div></td>
-                            
-                            <td class="product-name">
-                                <h3>Bell Pepper</h3>
-                                <p>Far far away, behind the word mountains, far from the countries</p>
-                            </td>
-                            
-                            <td class="price">$15.70</td>
-                            
-                            <td class="quantity">
-                                <div class="input-group mb-3">
-                                 <input type="text" name="quantity" class="quantity form-control input-number" value="1" min="1" max="100">
-                              </div>
-                          </td>
-                            
-                            <td class="total">$15.70</td>
-                          </tr><!-- END TR-->
-                        </tbody>
+                       
+                   
                       </table>
                   </div>
             </div>
         </div>
-        <div class="row justify-content-end">
-            <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
-                <div class="cart-total mb-3">
-                    <h3>Coupon Code</h3>
-                    <p>Enter your coupon code if you have one</p>
-                      <form action="#" class="info">
-              <div class="form-group">
-                  <label for="">Coupon code</label>
-                <input type="text" class="form-control text-left px-3" placeholder="">
-              </div>
-            </form>
-                </div>
-                <p><a href="checkout.html" class="btn btn-primary py-3 px-4">Apply Coupon</a></p>
-            </div>
-            <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
-                <div class="cart-total mb-3">
-                    <h3>Estimate shipping and tax</h3>
-                    <p>Enter your destination to get a shipping estimate</p>
-                      <form action="#" class="info">
-              <div class="form-group">
-                  <label for="">Country</label>
-                <input type="text" class="form-control text-left px-3" placeholder="">
-              </div>
-              <div class="form-group">
-                  <label for="country">State/Province</label>
-                <input type="text" class="form-control text-left px-3" placeholder="">
-              </div>
-              <div class="form-group">
-                  <label for="country">Zip/Postal Code</label>
-                <input type="text" class="form-control text-left px-3" placeholder="">
-              </div>
-            </form>
-                </div>
-                <p><a href="checkout.html" class="btn btn-primary py-3 px-4">Estimate</a></p>
-            </div>
-            <div class="col-lg-4 mt-5 cart-wrap ftco-animate">
-                <div class="cart-total mb-3">
-                    <h3>Cart Totals</h3>
-                    <p class="d-flex">
-                        <span>Subtotal</span>
-                        <span>$20.60</span>
-                    </p>
-                    <p class="d-flex">
-                        <span>Delivery</span>
-                        <span>$0.00</span>
-                    </p>
-                    <p class="d-flex">
-                        <span>Discount</span>
-                        <span>$3.00</span>
-                    </p>
-                    <hr>
-                    <p class="d-flex total-price">
-                        <span>Total</span>
-                        <span>$17.60</span>
-                    </p>
-                </div>
-                <p><a href="checkout.html" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
-            </div>
-        </div>
+        <table class="table table-bordered text-center">
+          <thead>
+              <tr>
+                  <th>#</th>
+                 
+                  <th>Product Name</th>
+                  <th>Price</th>
+                  <th>amount</th>
+                
+                  <th></th>
+              </tr>
+          </thead>
+          <tbody id="myTable">
+              <%let total =0; let cartTotal =0; %>
+              <% if (prods.length > 0) { %>
+
+             
+
+                  <% prods.map((product, index) => { %>
+                    <% cartTotal = parseInt(product.price)*parseInt(product.amount) %>
+                    <% total = total+cartTotal %>
+                      <tr>
+                          <td>
+                              <%- (index+1) %>
+                          </td>
+                          
+                          <td>
+                              <%- product.product_name%>
+                          </td>
+                          <td>
+                              <%- product.price%>
+                          </td>
+                          <td>
+                              <%- product.amount%>
+                          </td>
+                        
+                          
+                          <td>
+                              <a href="<%- '/deleteorder/'+product._id%>" onclick="return confirm('Are you sure you want to delete this item?');" class="btn btn-danger"> <i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>
+                          </td>
+                      </tr>
+                      <% }) %>
+                          <% } else { %>
+                              <tr>
+                                  <td colspan="4">
+                                      <h1>No Products Found!</h1>
+                                  </td>
+                              </tr>
+                              <% } %>
+          </tbody>
+          <h2>ยอดรวม <%= total %></h2>
+      </table>
         </div>
     </section>
+    
     <%- include('../includes/end.ejs') %>
