--- a/views/products/edit.ejs
+++ b/views/products/edit.ejs
@@ -17,8 +17,11 @@
                 <thead>
                     <tr>
                         <th>#</th>
+                        <th>category name</th>
                         <th>Product Name</th>
                         <th>Price</th>
+                        <th>amount</th>
+                        <th>description</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -31,13 +34,23 @@
                                     <%- (index+1) %>
                                 </td>
                                 <td>
+                                    <%- product.category_name%>
+                                </td>
+                                <td>
                                     <%- product.product_name%>
                                 </td>
                                 <td>
                                     <%- product.price%>
                                 </td>
                                 <td>
-                                    <a href="<%- '/products/update/'+product._id%>" class="btn btn-warning"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit</a>
+                                    <%- product.amount%>
+                                </td>
+                                <td>
+                                    <%- product.description%>
+                                </td>
+                                
+                                <td>
+                                    <a href="<%- '/update/'+product._id%>" class="btn btn-warning"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit</a>
                                     <a href="<%- '/delete/'+product._id%>" onclick="return confirm('Are you sure you want to delete this item?');" class="btn btn-danger"> <i class="fa fa-trash-o" aria-hidden="true"></i> Delete</a>
                                 </td>
                             </tr>
