--- a/views/products/update.ejs
+++ b/views/products/update.ejs
@@ -1,6 +1,5 @@
-<%- include('../includes/head.ejs') %> <%- include('../includes/navigation.ejs')
-%>
-
+<%- include('../includes/head.ejs') %>
+<%- include('../includes/navigation.ejs') %>
 <div class="container mt-3">
   <h2>Update Products</h2>
   <div class="row">
@@ -12,8 +11,18 @@
             <%= errorMessage[0].param + ': '+ errorMessage[0].msg %>
           </div>
           <% } %>
-          <form method="POST" action="/products/update">
+          <form method="POST" action="/update">
             <input type="hidden" name="product_id" value="<%- product_id %>" />
+            <div class="form-group">
+              <label for="category_name">Category name</label>
+              <input
+                type="text"
+                class="form-control"
+                name="category_name"
+                placeholder="category name"
+                value="<%= category_name %>"
+              />
+            </div>
             <div class="form-group">
               <label for="product_name">Product Name</label>
               <input
@@ -34,7 +43,37 @@
                 value="<%= price %>"
               />
             </div>
-            <a href="/products/search" class="btn btn-secondary"
+            <div class="form-group">
+              <label for="price">Amount</label>
+              <input
+                type="number"
+                class="form-control"
+                name="amount"
+                placeholder="amount"
+                value="<%= amount %>"
+              />
+            </div>
+            <div class="form-group">
+              <label for="description">Description</label>
+              <input
+                type="text"
+                class="form-control"
+                name="description"
+                placeholder="description"
+                value="<%= description %>"
+              />
+            </div>
+            <div class="form-group">
+              <label for="img_path">Img path</label>
+              <input
+                type="text"
+                class="form-control"
+                name="img_path"
+                placeholder="img_path"
+                value="<%= img_path %>"
+              />
+            </div>
+            <a href="/edit" class="btn btn-secondary"
               ><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a
             >
             <button type="submit" class="btn btn-success">
@@ -45,6 +84,5 @@
       </div>
     </div>
   </div>
-
-  <%- include('../includes/end.ejs') %>
 </div>
+<%- include('../includes/end.ejs') %>
